legal, privacy, about

--- a/index.html
+++ b/index.html
@@ -56,24 +56,13 @@
                 <div class="col-lg-8">
                     <h2 class="text-white mb-4 pt-3" id="about">About us</h2>
                     <p class="text-white-80">
-                        TatraSpace is a dedicated software house specializing in Space embedded systems.
-                        As a startup, we have begun making our mark in the New Space industry through collaborations
-                        with companies like Revolv Space.
-                        Our team of passionate experts brings valuable experience from the Space industry, focusing
-                        strongly on code quality and testability.
+                        <strong>We make Space software smarter — fast.</strong>
                         <br>
-                        <br>
-                        We believe that automated testing and remote access should be standard practices in the embedded
-                        systems industry.
-                        Committed to ensuring that your product performs reliably every time, we aim to accelerate your
-                        product development by enhancing code quality and readability.
-                        By providing remote access to your laboratory equipment, we eliminate geographical barriers,
-                        connecting your hardware with the right engineers wherever they are.
-                        <br>
-                        <br>
-                        We simplify automated testing processes to make your devices more robust, and through a
-                        continuous integration approach, we ensure that every new piece of code works seamlessly.
-                        With our growing expertise, we are ready to support your Space ambitions.
+                        At TatraSpace, we know one thing for sure: better code isn’t rocket science — it’s just smart
+                        engineering.
+                        We boost software quality through automation, testability, and remote lab access. If you want
+                        cleaner,
+                        more reliable embedded systems without the usual slowdowns, we’re the team to call.
                     </p>
                 </div>
             </div>
@@ -108,9 +97,10 @@
                 <div class="col-xl-6 col-lg-6">
                     <div class="featured-text-right text-center text-lg-left">
                         <h4>Embedded Software Development & Consultancy</h4>
-                        <p class="text-black-50 mb-0">We provide comprehensive code reviews and audits, developing
-                            software for embedded devices with a strong emphasis on quality. Our software comes with
-                            extensive documentation and testing, facilitating straightforward future development.
+                        <p class="text-black-50 mb-0">
+                            We craft embedded software that's clear, reliable, and ready for space—every single time.
+                            From thorough code reviews and careful audits to fully documented solutions, our software is
+                            built for longevity, ease of use and maintainability.
                         </p>
                     </div>
                 </div>
@@ -126,21 +116,9 @@
                 </div>
                 <div class="col-xl-6 col-lg-7"></div>
             </div>
-            <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
                 <div class="col-xl-6 col-lg-6"></div>
                 <div class="col-xl-6 col-lg-6">
                     <div class="featured-text-right text-center text-lg-left">
-                        <h4>Remote Access to Hardware</h4>
-                        <p class="text-black-50 mb-0">We set up remote access to your lab equipment, enabling embedded
-                            software development from anywhere in the world. This service overcomes geographical
-                            limitations, connecting your hardware with the perfect engineers regardless of their
-                            location.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                <div class="col-xl-6 col-lg-6">
-                    <div class="featured-text text-center text-lg-left">
                         <h4>Mission Support</h4>
                         <p class="text-black-50 mb-0">Our mission support services include planning in-orbit tests,
                             integrating with ground stations, debugging issues that arise in Space, and designing
@@ -150,7 +128,6 @@
                 <div class="col-xl-6 col-lg-6"></div>
             </div>
             <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                <div class="col-xl-6 col-lg-6"></div>
                 <div class="col-xl-6 col-lg-6">
                     <div class="featured-text-right text-center text-lg-left">
                         <h4>Payload Integration Services</h4>
@@ -160,16 +137,6 @@
                     </div>
                 </div>
             </div>
-            <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                <div class="col-xl-6 col-lg-6">
-                    <div class="featured-text text-center text-lg-left">
-                        <h4>Testing as a Service</h4>
-                        <p class="text-black-50 mb-0">We analyze your product to identify weak points and uncover
-                            potential pitfalls that could become critical in orbit. By helping you mitigate these risks,
-                            we enhance the reliability and success of your mission.
-                        </p>
-                    </div>
-                </div>
                 <div class="col-xl-6 col-lg-6"></div>
             </div>
         </div>
@@ -233,13 +200,13 @@
 
         </div>
     </section>
-        <footer class="footer-custom mt-5">
-            <div class="container text-center">
-                <span class="footer-text">&copy; TatraSpace 2025</span> |
-                <a class="footer-link" href="/legal/">Legal Notice & Terms of Use</a> |
-                <a class="footer-link" href="/privacy/">Privacy Policy</a>
-            </div>
-        </footer>
+    <footer class="footer-custom mt-5">
+        <div class="container text-center">
+            <span class="footer-text">&copy; TatraSpace 2025</span> |
+            <a class="footer-link" href="/legal/">Legal Notice & Terms of Use</a> |
+            <a class="footer-link" href="/privacy/">Privacy Policy</a>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/scripts.js"></script>
 </body>
