--- a/legal/index.html
+++ b/legal/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Legal Notice & Terms of Use - TatraSpace</title>
-  <link rel="stylesheet" href="/css/styles.css?v=1.0" />
-  <link rel="icon" type="image/x-icon" href="/assets/favicon2.png" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Legal Notice & Terms of Use - TatraSpace</title>
+    <link rel="stylesheet" href="/css/styles.css?v=1.0" />
+    <link rel="icon" type="image/x-icon" href="/assets/favicon2.png" />
 </head>
+
 <body>
 
- <nav class="navbar navbar-expand-lg navbar-dark fixed-top blur-navbar" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top blur-navbar" id="mainNav">
         <div class="container px-4 px-lg-5">
             <img class="navbar-brand img-navbar" src="/assets/img/output_white_image.png" alt="TatraSpace Logo" />
             <img class="navbar-brand img-navbar logo-dark d-none" src="assets/img/output_black_image.webp"
@@ -31,22 +33,95 @@
         </div>
     </nav>
 
-  <main class="legal-page container px-4 px-lg-5 py-5">
-    <h1 class="page-title">Legal Notice & Terms of Use</h1>
-    <p class="page-text">
-      This website is operated by TatraSpace. By accessing or using our website, you agree to these terms. Please review them carefully.
-    </p>
-    <!-- Add more legal content here -->
-  </main>
+    <main class="legal-page container px-4 px-lg-5 py-5">
+        <h1>Legal Notice & Terms of Use</h1>
+        <br>
+        <br>
+        <h2>Legal Notice</h2>
 
-  <footer class="footer-custom mt-5">
-    <div class="container text-center">
-      <span class="footer-text">&copy; TatraSpace 2025</span> |
+        <p>Tatracloud sp. z o.o. is the legal operator of this website and the sole entity responsible for its content,
+            services, and associated data processing.</p>
+
+        <p>TatraSpace is a commercial brand of Tatracloud sp. z o.o., under which our products and services are
+            presented and promoted.</p>
+
+        <p>All relevant corporate and registration information is listed above. Should you have any inquiries or
+            concerns regarding this website or our services, please contact us via the listed email address.</p>
+
+        <hr>
+
+        <h2>Terms of Use</h2>
+
+        <h3>1. Use of Website</h3>
+        <p>The website is provided for general informational purposes regarding our company, product incubation efforts,
+            and services. While we strive to keep all content accurate and up to date, we make no guarantees regarding
+            completeness or correctness.</p>
+
+        <h3>2. Waitlist Signup</h3>
+        <p>Users may voluntarily join a waitlist for our product by providing their email address. By submitting your
+            email:</p>
+        <ul>
+            <li>You consent to us storing and using your email address for the purpose of product updates and
+                communication.</li>
+            <li>You may unsubscribe at any time by contacting us or using the opt-out link (if provided).</li>
+        </ul>
+
+        <h3>3. Scheduling Meetings</h3>
+        <p>This website may include a scheduling feature integrated with Google Calendar. When using this feature:</p>
+        <ul>
+            <li>You may be redirected to a third-party service (Google Calendar or Google Meet).</li>
+            <li>Tatracloud sp. z o.o. is not responsible for the privacy practices or terms of Google services.</li>
+            <li>You are responsible for ensuring the accuracy of any data you submit.</li>
+        </ul>
+
+        <h3>4. Intellectual Property</h3>
+        <p>All content, design, and materials on this website (including text, graphics, logos, and branding) are the
+            intellectual property of Tatracloud sp. z o.o., unless stated otherwise. Unauthorized use is prohibited.</p>
+
+        <h3>5. Limitation of Liability</h3>
+        <p>We are not liable for any direct, indirect, or incidental damages arising from the use or inability to use
+            this website, including third-party links or services.</p>
+
+        <h3>6. External Links</h3>
+        <p>The website may contain links to external websites or services not operated by us. We have no control over
+            their content or policies and disclaim any liability related to their use.</p>
+
+        <hr>
+
+        <h2>Governing Law</h2>
+        <p>These terms are governed by the laws of the Republic of Poland. Any legal disputes shall fall under the
+            jurisdiction of Polish courts.</p>
+
+        <hr>
+
+        <p>This website (tatraspace.com) is operated by:</p>
+
+        <p><strong>Tatracloud sp. z o.o.</strong><br>
+            Trading under the brand name <strong>TatraSpace</strong><br>
+            ul. Krzycka 71/2, 53-019 Wrocław, Poland<br>
+            Company Registration Number (KRS): 0001031439<br>
+            VAT ID (NIP): 8992958011<br>
+            Email: <a href="mailto:office@tatraspace.com">office@tatraspace.com</a></p>
+
+        <hr>
+
+        <h2>Contact</h2>
+        <p>If you have any questions regarding these terms or our company’s legal information, please contact us at:<br>
+            <strong>Email:</strong> <a href="mailto:office@tatraspace.com">office@tatraspace.com</a>
+        </p>
+
+        <p><em>Last updated: May 19, 2025</em></p>
+
+    </main>
+
+    <footer class="footer-custom mt-5">
+        <div class="container text-center">
+            <span class="footer-text">&copy; TatraSpace 2025</span> |
             <a class="footer-link" href="/legal/">Legal Notice & Terms of Use</a> |
             <a class="footer-link" href="/privacy/">Privacy Policy</a>
-    </div>
-  </footer>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/scripts.js"></script>
 </body>
 
