--- a/privacy/index.html
+++ b/privacy/index.html
@@ -31,10 +31,11 @@
     </nav>
 
     <main class="privacy-page container px-4 px-lg-5 py-5">
-        <h1 class="page-title">Privacy Policy</h1>
-        <p class="page-date">Last updated: May 20, 2025</p>
 
-        <h2>Table of Contents</h2>
+        <h2>Privacy Policy</h2>
+        <p>Last updated: May 20, 2025</p>
+
+        <h3>Table of Contents</h3>
         <ol>
             <li><a href="#intro">Introduction</a></li>
             <li><a href="#collect">Information We Collect</a></li>
@@ -52,14 +53,124 @@
             <li><a href="#contact">Contact Information</a></li>
             <li><a href="#jurisdiction">Governing Law and Jurisdiction</a></li>
         </ol>
+        <h3 id="intro">1. Introduction</h3>
+        <p>
+            Tatracloud sp. z o.o. ("we", "our", "us"), operating under the brand TatraSpace, respects your privacy and
+            is committed to protecting your personal data. This Privacy Policy describes how we collect, use, and
+            safeguard your personal information when you interact with our website.
+        </p>
+        <p>
+            We operate in compliance with the General Data Protection Regulation (GDPR), the Polish Act on Personal Data
+            Protection, and related laws. Our registered office is located at ul. Krzycka 71/2, 53-019 Wrocław, Poland
+            (KRS: 0001031439, NIP: 8992958011).
+        </p>
 
-        <section id="intro">
-            <h2>1. Introduction</h2>
-            <p>This Privacy Policy explains how Tatracloud sp. z o.o. ("we," "our," "us," or "the Company"), operating
-                under the brand name TatraSpace, collects, uses, and protects your personal information when you visit
-                our website. [...]</p>
-        </section>
+        <h3 id="collect">2. Information We Collect</h3>
+        <p>We only collect information essential for the functioning, security, and communication purposes of this
+            website.</p>
 
+        <h4 id="cloudflare">2.1 Technical Information Through Cloudflare</h4>
+        <p>Our site uses Cloudflare to improve performance and security. This includes setting cookies that detect bots
+            and prevent malicious activity.</p>
+        <ul>
+            <li><strong>cf_clearance:</strong> Confirms you passed a security challenge.</li>
+            <li><strong>_cf_bm:</strong> Identifies bots and manages site traffic.</li>
+            <li><strong>cfclearance:</strong> Maintains secure website access.</li>
+        </ul>
+        <p>Cloudflare also provides us with aggregated data such as IP ranges, browser type, region, and visit
+            frequency. This data is not used to identify individuals unless required for security or legal reasons.</p>
+
+        <h4 id="email">2.2 Email Addresses for Waitlist</h4>
+        <p>When you voluntarily sign up for our waitlist:</p>
+        <ul>
+            <li>We collect your email address and submission time.</li>
+            <li>A confirmation link is sent to verify your consent (double opt-in).</li>
+            <li>We use Mailchimp to manage this process.</li>
+        </ul>
+
+        <h4 id="calendar">2.3 Google Calendar Appointment Scheduling</h4>
+        <p>Our site may allow scheduling meetings via Google Calendar. This process may collect:</p>
+        <ul>
+            <li>Your name and email address</li>
+            <li>Preferred appointment time and additional info</li>
+            <li>Time zone and device-related metadata</li>
+        </ul>
+        <p>All data shared through Google is processed in accordance with their terms and privacy policy.</p>
+
+        <h3 id="legal-basis">3. Legal Basis for Processing</h3>
+        <ul>
+            <li><strong>Cloudflare Services:</strong> Legitimate interest (Article 6(1)(f) GDPR)</li>
+            <li><strong>Waitlist Subscription:</strong> Consent (Article 6(1)(a) GDPR)</li>
+            <li><strong>Appointment Scheduling:</strong> Consent and contractual necessity (Articles 6(1)(a) and 6(1)(b)
+                GDPR)</li>
+        </ul>
+
+        <h3 id="retention">4. Data Retention</h3>
+        <p>We retain data only as long as necessary for the purposes described:</p>
+        <ul>
+            <li><strong>Technical data:</strong> Retained temporarily by Cloudflare and anonymized for analysis.</li>
+            <li><strong>Email addresses:</strong> Retained until campaign ends or you unsubscribe.</li>
+            <li><strong>Appointment data:</strong> Retained until your meeting is complete or per legal requirements.
+            </li>
+        </ul>
+
+        <h3 id="rights">5. Your Rights Under GDPR</h3>
+        <p>You have the right to:</p>
+        <ul>
+            <li>Access, correct, or delete your personal data</li>
+            <li>Restrict or object to data processing</li>
+            <li>Withdraw consent at any time</li>
+            <li>Receive your data in a portable format</li>
+            <li>Lodge a complaint with a data protection authority</li>
+        </ul>
+        <p>To exercise these rights, please contact us using the information below.</p>
+
+        <h3 id="security">6. Data Security Measures</h3>
+        <p>We apply both technical and organizational safeguards to protect your data. These include:</p>
+        <ul>
+            <li>HTTPS encryption</li>
+            <li>Firewall and DDoS protection via Cloudflare</li>
+            <li>Access controls and staff confidentiality obligations</li>
+            <li>Regular system updates and security assessments</li>
+        </ul>
+
+        <h3 id="transfers">7. International Data Transfers</h3>
+        <p>Your data may be processed outside the EEA by trusted third-party services. Safeguards include:</p>
+        <ul>
+            <li>EU-US Data Privacy Framework participation</li>
+            <li>Standard Contractual Clauses (SCCs)</li>
+            <li>Binding Corporate Rules (BCRs) where applicable</li>
+        </ul>
+
+        <h3 id="third-parties">8. Use of Third-Party Services</h3>
+        <ul>
+            <li><strong>Cloudflare:</strong> Security and performance optimization</li>
+            <li><strong>Mailchimp:</strong> Email list management (compliant with data transfer regulations)</li>
+            <li><strong>Google Calendar:</strong> Meeting scheduling platform</li>
+        </ul>
+
+        <h3 id="children">9. Children's Privacy</h3>
+        <p>Our services are not directed to children under 16. We do not knowingly collect personal data from minors. If
+            you believe a child has submitted data to us, please contact us for prompt deletion.</p>
+
+        <h3 id="changes" >10. Changes to This Privacy Policy</h3>
+        <p>We may update this policy periodically. Changes will be posted on this page with the updated date. Material
+            updates may be announced via prominent notice.</p>
+
+        <h3 id="contact">11. Contact Information</h3>
+        <p>If you have questions about this policy or your data, please contact:</p>
+        <p>
+            Tatracloud sp. z o.o.<br>
+            ul. Krzycka 71/2<br>
+            53-019 Wrocław, Poland<br>
+            Email: <a href="mailto:office@tatraspace.com">office@tatraspace.com</a>
+        </p>
+
+        <h3 id="jurisdiction">12. Governing Law and Jurisdiction</h3>
+        <p>This policy is governed by Polish law. Any legal matters will be resolved under the jurisdiction of Polish
+            courts in Wrocław.</p>
+
+        <hr>
         <footer class="footer-custom mt-5">
             <div class="container text-center">
                 <span class="footer-text">&copy; TatraSpace 2025</span> |
@@ -67,7 +178,8 @@
                 <a class="footer-link" href="/privacy/">Privacy Policy</a>
             </div>
         </footer>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/scripts.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="/js/scripts.js"></script>
 </body>
+
 </html>
