privacy and mainpage adjustments

--- a/index.html
+++ b/index.html
@@ -108,35 +108,43 @@
             <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
                 <div class="col-xl-6 col-lg-5">
                     <div class="featured-text text-center text-lg-left">
-                        <h4>Automated Test Setup from Scratch</h4>
-                        <p class="text-black-50 mb-0">We specialize in creating automated test setups and integrating
-                            them into continuous integration pipelines like GitLab CI. This enhances the reliability and
-                            efficiency of your testing processes, leading to more robust devices.</p>
+                        <h4>Automated Testing & Quality Assurance</h4>
+                        <p class="text-black-50 mb-0">
+                            Great software deserves great testing. We build automated test environments, integrate
+                            seamless CI/CD pipelines (like GitLab CI), and continuously refine your software to
+                            eliminate risks before liftoff. Let us enhance your product’s resilience—giving your team
+                            confidence at every stage of development.</p>
                     </div>
                 </div>
                 <div class="col-xl-6 col-lg-7"></div>
             </div>
+            <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
                 <div class="col-xl-6 col-lg-6"></div>
                 <div class="col-xl-6 col-lg-6">
                     <div class="featured-text-right text-center text-lg-left">
                         <h4>Mission Support</h4>
-                        <p class="text-black-50 mb-0">Our mission support services include planning in-orbit tests,
-                            integrating with ground stations, debugging issues that arise in Space, and designing
-                            comprehensive test scenarios to ensure mission success.</p>
+                        <p class="text-black-50 mb-0">
+                            Having you're device in orbit demands robust missions plans, and
+                            that's exactly what we deliver. From detailed in-orbit test planning and ground station
+                            integration to proactive debugging and test scenario design, we provide comprehensive
+                            support throughout your mission lifecycle. We're here to ensure your project reaches orbit
+                            ready for success.
+                        </p>
                     </div>
                 </div>
-                <div class="col-xl-6 col-lg-6"></div>
             </div>
             <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
                 <div class="col-xl-6 col-lg-6">
-                    <div class="featured-text-right text-center text-lg-left">
+                    <div class="featured-text text-center text-lg-left">
                         <h4>Payload Integration Services</h4>
-                        <p class="text-black-50 mb-0">We assist in integrating Commercial Off-The-Shelf (COTS)
-                            components into satellite buses and develop On-Board Computer (OBC) software, streamlining
-                            the payload integration process.</p>
+                        <p class="text-black-50 mb-0">
+                            Integrating payloads shouldn't slow you down—and with us, it
+                            won't. We streamline the integration of COTS components with your satellite bus, developing
+                            robust OBC software tailored for space-grade reliability. Focus on your mission goals; we'll
+                            handle the complexity and deliver results.
+                        </p>
                     </div>
                 </div>
-            </div>
                 <div class="col-xl-6 col-lg-6"></div>
             </div>
         </div>
