--- a/privacy/index.html
+++ b/privacy/index.html
@@ -55,41 +55,65 @@
         </ol>
         <h3 id="intro">1. Introduction</h3>
         <p>
-            Tatracloud sp. z o.o. ("we", "our", "us"), operating under the brand TatraSpace, respects your privacy and
-            is committed to protecting your personal data. This Privacy Policy describes how we collect, use, and
-            safeguard your personal information when you interact with our website.
+            This Privacy Policy explains how Tatracloud sp. z o.o. ("we," "our," "us," or "the Company"), operating under the brand name TatraSpace, collects, uses, and protects your personal information when you visit our website. We are committed to protecting your privacy and ensuring the security of your personal data in accordance with applicable data protection regulations.
         </p>
         <p>
-            We operate in compliance with the General Data Protection Regulation (GDPR), the Polish Act on Personal Data
-            Protection, and related laws. Our registered office is located at ul. Krzycka 71/2, 53-019 Wrocław, Poland
-            (KRS: 0001031439, NIP: 8992958011).
+            Tatracloud sp. z o.o. is registered in Poland (European Union) with its registered office at ul. Krzycka 71/2, 53-019 Wrocław. Our Company Registration Number (KRS) is 0001031439, and our VAT Identification Number (NIP) is 8992958011.
+        </p>
+        <p>
+            This Privacy Policy has been prepared in accordance with the General Data Protection Regulation (GDPR) (EU) 2016/679, the Polish Act on Personal Data Protection, and other applicable data protection laws. It outlines the types of information we collect, how we use it, the legal basis for processing your data, and your rights regarding your personal information.
+        </p>
+        <h3 id="collect">2. Information We Collect</h3>
+        <p>
+            Our website is designed to be minimally invasive of your privacy. We collect only essential data necessary for providing our services and ensuring website security.
         </p>
 
-        <h3 id="collect">2. Information We Collect</h3>
-        <p>We only collect information essential for the functioning, security, and communication purposes of this
-            website.</p>
-
         <h4 id="cloudflare">2.1 Technical Information Through Cloudflare</h4>
-        <p>Our site uses Cloudflare to improve performance and security. This includes setting cookies that detect bots
-            and prevent malicious activity.</p>
+        <p>Our website uses Cloudflare for security and performance optimization. Cloudflare sets strictly necessary cookies to detect bots, manage traffic, and protect against malicious activity.</p>
+        <h5>2.1.1. Cloudflare Cookies</h4>
         <ul>
-            <li><strong>cf_clearance:</strong> Confirms you passed a security challenge.</li>
-            <li><strong>_cf_bm:</strong> Identifies bots and manages site traffic.</li>
-            <li><strong>cfclearance:</strong> Maintains secure website access.</li>
+            <li><strong>cf_clearance:</strong> Set when you complete a security challenge. Its primary purpose is to verify you're a legitimate user and not a bot.</li>
+            <li><strong>_cf_bm:</strong> Helps manage incoming traffic and identify malicious bots.</li>
+            <li><strong>cfclearance:</strong> Helps maintain secure access to the website.</li>
         </ul>
-        <p>Cloudflare also provides us with aggregated data such as IP ranges, browser type, region, and visit
-            frequency. This data is not used to identify individuals unless required for security or legal reasons.</p>
+        <p>
+            These cookies are classified as "strictly necessary" under GDPR and are exempt from explicit consent requirements. They do not track users for marketing purposes or collect personal data beyond what is needed for security.
+        </p>
+        <h5>2.1.2. Cloudflare Analytics Data</h5>
+
+         <p>
+        Through Cloudflare's free version, we receive aggregated information about:
+        </p>
+
+        <ul>
+            <li>IP addresses</li>
+            <li>Number and frequency of requests</li>
+            <li>Country and region of origin</li>
+            <li>Browser type and version</li>
+            <li>Operating system</li>
+            <li>Device type</li>
+            <li>Network information</li>
+            <li>Time and duration of visits</li>
+            <li>Pages visited</li>
+            <li>Referring websites</li>
+            <li>Other technical information related to website traffic and security</li>
+        </ul>
+        <p>
+            This information is processed in an aggregated manner and is not used to individually identify you unless necessary for security incident investigation or as required by law.
+        </p>
 
         <h4 id="email">2.2 Email Addresses for Waitlist</h4>
-        <p>When you voluntarily sign up for our waitlist:</p>
+        <p>When you voluntarily choose to join our waitlist through the "Join the waiting list" section on our website, we collect:</p>
         <ul>
-            <li>We collect your email address and submission time.</li>
-            <li>A confirmation link is sent to verify your consent (double opt-in).</li>
-            <li>We use Mailchimp to manage this process.</li>
+            <li>Your email address (required)</li>
+            <li>Submission timestamp</li>
+            <li>Form metadata (e.g., campaign ID or source page)</li>
         </ul>
-
+        <p>
+            We use a double opt-in process through Mailchimp, which means that after submitting your email, you must confirm your subscription by clicking a link sent to your email address before being added to our waitlist.
+        </p>
         <h4 id="calendar">2.3 Google Calendar Appointment Scheduling</h4>
-        <p>Our site may allow scheduling meetings via Google Calendar. This process may collect:</p>
+        <p>Our website includes a button that redirects you to Google Calendar's "Appointment schedule" feature, where you can book appointments with us.</p>
         <ul>
             <li>Your name and email address</li>
             <li>Preferred appointment time and additional info</li>
@@ -97,12 +121,37 @@
         </ul>
         <p>All data shared through Google is processed in accordance with their terms and privacy policy.</p>
 
-        <h3 id="legal-basis">3. Legal Basis for Processing</h3>
+        <h5>2.3.1. Information Collected Through Google Calendar</h4>
+        <p>When you schedule an appointment through Google Calendar, the following personal data may be collected:<</p>
         <ul>
-            <li><strong>Cloudflare Services:</strong> Legitimate interest (Article 6(1)(f) GDPR)</li>
-            <li><strong>Waitlist Subscription:</strong> Consent (Article 6(1)(a) GDPR)</li>
-            <li><strong>Appointment Scheduling:</strong> Consent and contractual necessity (Articles 6(1)(a) and 6(1)(b)
-                GDPR)</li>
+            <li>Your full name</li>
+            <li>Your email address</li>
+            <li>Your preferred appointment time and date</li>
+            <li>Duration of the scheduled meeting</li>
+            <li>Any additional information you provide in the appointment booking form</li>
+            <li>Location information (if location-based services are enabled)</li>
+            <li>Your time zone</li>
+        </ul>
+
+        <h3 id="legal-basis">3. Legal Basis for Processing</h3>
+        <p>We process your personal data on the following legal bases as defined in Article 6 of the GDPR:</p>
+        <h4>3.1. Cloudflare Security and Analytics</h4>
+        <ul>
+            <li><strong>Legal Basis:</strong> Legitimate interest (Article 6(1)(f) GDPR)</li>
+            <li><strong>Specific interest:</strong> Ensuring the security and optimal performance of our website, protecting against malicious attacks, and analyzing usage patterns to improve user experience</li>
+        </ul>
+
+        <h4>3.2. Waitlist Email Subscription</h4>
+        <ul>
+            <li><strong>Legal Basis:</strong> Legitimate interest (Article 6(1)(f) GDPR)</li>
+            <li><strong>How consent is obtained:</strong> Through a clear affirmative action when you submit your email and confirm via the double opt-in mechanism</li>
+        </ul>
+
+        <h4>3.3. Google Calendar Appointment Scheduling</h4>
+        <ul>
+            <li><strong>Legal Basis:</strong> Legitimate interest (Article 6(1)(f) GDPR)</li>
+            <li><strong>How consent is obtained:</strong> Through your voluntary action of booking an appointment</li>
+            <li><strong>Contractual necessity:</strong> Processing is necessary to fulfill our obligation to provide the appointment service you requested</li>
         </ul>
 
         <h3 id="retention">4. Data Retention</h3>
