--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet" />
     <link href="css/styles.css?v=1.0" rel="stylesheet" />
+    <link href="css/wisent-wire.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -58,11 +59,11 @@
                     <p class="text-white-80">
                         <strong>We make Space software smarter — fast.</strong>
                         <br>
-                        At TatraSpace, we know one thing for sure: better code isn’t rocket science — it’s just smart
+                        At TatraSpace, we know one thing for sure: better code isn't rocket science — it's just smart
                         engineering.
                         We boost software quality through automation, testability, and remote lab access. If you want
                         cleaner,
-                        more reliable embedded systems without the usual slowdowns, we’re the team to call.
+                        more reliable embedded systems without the usual slowdowns, we're the team to call.
                     </p>
                 </div>
             </div>
@@ -71,16 +72,16 @@
                     <h2 class="text-white mb-4">Our clients</h2>
                     <div class="row gx-5 gy-5 justify-content-center">
                         <div class="col-6 col-md-3 text-center">
-                            <img src="assets/img/REVOLV_logo_dark_mode.png" alt="revolv" class="img-fluid mb-5">
+                            <img src="assets/img/REVOLV_logo_dark_mode.png" alt="revolv" class="img-fluid mb-5" title="Revolv Space">
                         </div>
                         <div class="col-6 col-md-3 text-center">
-                            <img src="assets/img/MukeLogo.jpeg" alt="muke" class="img-fluid mb-5">
+                            <img src="assets/img/MukeLogo.jpeg" alt="muke" class="img-fluid mb-5" title="Muke">
                         </div>
                         <div class="col-6 col-md-3 text-center">
-                            <img src="assets/mail/lunar_tech.png" alt="lunar_tech" class="img-fluid mb-5">
+                            <img src="assets/mail/lunar_tech.png" alt="lunar_tech" class="img-fluid mb-5" title="AGH Lunar Tech">
                         </div>
                         <div class="col-6 col-md-3 text-center">
-                            <img src="assets/mail/spacelocker.png" alt="space_locker" class="img-fluid mb-5">
+                            <img src="assets/mail/spacelocker.png" alt="space_locker" class="img-fluid mb-5" title="Space Locker">
                         </div>
                     </div>
                 </div>
@@ -190,21 +191,36 @@
             </div>
 
         </div>
-        <div class="container px-4 px-lg-5">
-            <h2 class="text-white mb-5 text-center">Contact us!</h2>
-            <div class="row gx-4 gx-lg-5 justify-content-center">
-                <div class="col-md-4 mb-3 mb-md-0">
-                    <div class="card py-4 h-100">
-                        <div class="card-body text-center">
-                            <i class="fas fa-envelope text-primary mb-2"></i>
-                            <h4 class="text-uppercase m-0">Email</h4>
-                            <hr class="my-4 mx-auto" />
-                            <div class="small text-black-50"><a href="#!">office@tatraspace.com</a></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+<div class="container">
+    <h2 class="text-white mb-5 text-center">Contact us!</h2>
+    <div class="contact-cards-grid">
+        <div class="content-card text-center">
+            <i class="fas fa-envelope contact-card-icon"></i>
+            <h3>Email</h3>
+            <p>
+                <a href="mailto:office@tatraspace.com" class="contact-card-link">
+                    office@tatraspace.com
+                </a>
+            </p>
         </div>
+        <div class="content-card text-center">
+            <i class="fas fa-calendar-alt contact-card-icon"></i>
+            <h3>Set up a meeting</h3>
+            <p>
+                <a href="https://calendly.com/your-company/meeting"
+                   target="_blank"
+                   rel="noopener"
+                   class="contact-card-btn">
+                    Book a meeting
+                </a>
+            </p>
+        </div>
+    </div>
+</div>
+
+
+
+
 
         </div>
     </section>
