--- a/wisent-wire/index.html
+++ b/wisent-wire/index.html
@@ -15,32 +15,26 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top blur-navbar" id="mainNav">
-            <div class="container px-4 px-lg-5">
-                <a href="/" class="navbar-brand logo-link">
-                <img class="navbar-brand img-navbar" src="/assets/img/output_white_image.png" alt="TatraSpace Logo" />
-                </a>
-                <!-- <div class="logo"><span class="logo-accent">Wisent</span>Space</div> -->
-                <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    Menu
-                    <i class="fas fa-bars"></i>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="/wisent-wire/">Our product</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/#about">About us</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/#services">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/#contact">Contact</a></li>
-                    </ul>
-                </div>
+    <nav class="wisent-navbar">
+        <div class="wisent-navbar-inner">
+            <a href="/" class="wisent-navbar-logo-link">
+                <img src="/assets/img/output_white_image.png" alt="TatraSpace Logo" class="wisent-navbar-logo-img" />
+            </a>
+            <button class="wisent-navbar-toggle" aria-label="Toggle navigation" onclick="document.querySelector('.wisent-navbar-links').classList.toggle('open')">
+                <i class="fas fa-bars"></i>
+            </button>
+            <div class="wisent-navbar-links">
+                <a class="wisent-navbar-link" href="/wisent-wire/">Our product</a>
+                <a class="wisent-navbar-link" href="/#about">About us</a>
+                <a class="wisent-navbar-link" href="/#services">Services</a>
+                <a class="wisent-navbar-link" href="/#contact">Contact</a>
             </div>
-        </nav>
+        </div>
+    </nav>
         <section class="hero-section">
             <div class="hero-left">
                 <h1 class="main-title">REMOTE HARDWARE ACCESS IS THE GATEWAY TO <span class="highlight-bg">AI-ASSISTED EMBEDDED</span><br><span class="highlight-bg">SOFTWARE DEVELOPMENT</span></h1>
-                
+
                 <h2 class="subtitle">Embedded development is held back by hardware access. We've built a platform that brings physical signals into the digital world — so AI can help, and engineers can build from anywhere.</h2>
                 
                 <div class="divider"></div>
@@ -109,6 +103,13 @@
             </div>
         </section>
     </div>
+            <footer class="footer-custom mt-5">
+            <div class="container text-center">
+                <span class="footer-text">&copy; TatraSpace 2025</span> |
+                <a class="footer-link" href="/legal/">Legal Notice & Terms of Use</a> |
+                <a class="footer-link" href="/privacy/">Privacy Policy</a>
+            </div>
+        </footer>
 </body>
 
 </html>
